<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_300"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_main"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="72dp"
            android:layout_marginTop="74dp"
            android:layout_marginEnd="90dp"
            android:src="@drawable/logo"
            ads:layout_constraintBottom_toTopOf="@+id/rl1"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="90dp"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical"
            ads:layout_constraintBottom_toTopOf="@+id/adView"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/image_main">

            <Button
                android:id="@+id/playBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/buttongame"
                android:gravity="center_horizontal|center"
                android:onClick="Play"
                android:padding="10dp"
                android:text="@string/game"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/addPointsBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/buttongame"
                android:gravity="center_horizontal|center"
                android:onClick="addpoint"
                android:padding="10dp"
                android:text="@string/addpoint"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/google_play"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/buttongame"
                android:onClick="google"
                android:text="@string/app"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rating"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/buttongame"
                android:onClick="rating"
                android:text="@string/rat"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/rl1" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>