<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacl"
    tools:context=".activity.addPointActivity"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/rateApp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="61dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="61dp"
            android:background="@drawable/button"
            android:onClick="RatingApp"
            android:text="@string/rate_app"
            android:textAlignment="center"
            android:textColor="@color/amber_50"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/you"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="64dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="61dp"
            android:background="@drawable/button"
            android:onClick="AdsMob"
            android:text="@string/watch_add"
            android:textAlignment="center"
            android:textColor="@color/amber_50"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rateApp"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="61dp" />


        <Button
            android:id="@+id/share"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="31dp"
            android:background="@drawable/button"
            android:onClick="ShareApp"
            android:text="@string/share_app"
            android:textAlignment="center"
            android:textColor="@color/amber_50"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/you"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="31dp" />


        <Button
            android:id="@+id/fac"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="31dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="31dp"
            android:background="@drawable/button"
            android:onClick="Facebook"
            android:text="@string/share_fac"
            android:textAlignment="center"
            android:textColor="@color/amber_50"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>